Подготовил проект к работе

--- a/app/layout/modules/head/head.pug
+++ b/app/layout/modules/head/head.pug
@@ -12,5 +12,7 @@ html(lang="ru")
 		title= pageTitle
 		link(rel="stylesheet" href="css/style.min.css")
 	body
-		include ../tmp/grid
+		include ../../tmp/grid
+		include ../header/header
 		block content
+		include ../footer/footer
