--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -1,8 +1,10 @@
 @import "variables.sass"
+@import "sass-libs/swiper.scss"
 
-@import "modules/navigation/menu.sass"
+@import "modules/interface/menu.sass"
 @import "modules/header/header.sass"
 
+@import "modules/blocks/slider.sass"
 
 @import "smart-grid.sass"
 @import "normalize.sass"
