--- a/app/layout/modules/header/header.pug
+++ b/app/layout/modules/header/header.pug
@@ -1,2 +1,11 @@
-include menu
-include slider
+header.header
+	.wrapper
+		.headerBlocks
+			.headerBlocks__logo
+				a(href="index.html")
+					img(src="img/logo/logoNew.png", alt="")
+			address.headerBlocks__address
+				.address-phone Мобильный: <span>+7 918 168 70 00</span>
+				.address-phone Рабочий: <span>+7 8617 61-92-16</span>
+				.address-email Email: <span>manager@ardall.ru</span>
+		include menu
