--- a/app/sass/_variables.sass
+++ b/app/sass/_variables.sass
@@ -1,7 +1,16 @@
 // Colors
+$active-blue: #3E70DF
+$active-red: rgb(88, 23, 23)
 $white: #f6f6f6
-$black: #000000
+$black: rgb(56, 56, 56)
+$gold: #CF9E41
 
 
 // Sizes
+$supertiny-font-size: 10px
+$tiny-font-size: 12px
+$small-font-size: 14px
 $base-font-size: 16px
+$medium-font-size: 18px
+$large-font-size: 24px
+$big-font-size: 36px
