--- a/app/layout/pages/index.pug
+++ b/app/layout/pages/index.pug
@@ -4,8 +4,51 @@ block variables
 	- var pageTitle = 'Главная'
 
 block content
-	h1 Pug - node template engine!!!!!!!
-	#container.col
-		p.
-			Pug is a terse and simple templating language with a
-			strong focus on performance and powerful features.
+	// Main
+	main.main
+		.wrapper
+			// Content
+			section.contentBlock
+				.contentBlock__text
+					h2.contentBlock__title Ардалл Инжиниринг
+					.contentBlock__about
+						.contentBlock__photo
+							img(src="https://dummyimage.com/800x400/aeaeae/fff.jpg", alt="")
+						.contentBlock__descr
+							p Профиль компании Ардалл инжиниринг - поставка и монтаж вентиляционного оборудования, сплит ситем, промышленных кондиционеров для зданий и сооружений различного назначения с соблюдением норм, стандартов и регламентов.
+							p Мы используем вентиляционное оборудование, промышленные кондиционеры, и сплит системы хорошо зарекомендовавшие себя в работе, проверенные временем, известных и надежных производителей.
+							p Для нас важно, работа должна быть выполнена на высоком уровне, а климатическая техника и вентиляционные установки отработали весь срок службы, без поломок.
+							p Мы работаем с отечественными и импортными производителями вентиляционных установок, промышленных кондиционеров, бытовых сплит систем. Все установленное оборудование проверяем надлежащим образом, также проводим мониторинг работоспособности и отказоустойчивости оборудования.
+							p Занимаемся поставкой и установкой бытовых кондиционеров и сплит систем, применяемых в квартирах и частных домах. Используем полупромышленные, промышленные, канальные сплит системы при кондиционировании помещений общественного назначения(кафе, магазины, развлекательные клубы). Чиллеры, ККБ, крышные кондиционеры, руфтопы для достижения комфортного микроклимата в больших торговых центрах и гипермаркетах.
+					h2.contentBlock__title Производство воздуховодов и фасонных изделий
+					.contentBlock__about
+						.contentBlock__photo
+							img(src="https://dummyimage.com/600x400/aeaeae/fff.jpg", alt="")
+						.contentBlock__descr
+							p Ардалл Инжиниринг имеет свой производственный цех по изготовлению деталей систем вентиляции из оцинкованной и нержавеющей стали любого вида и сложности.
+							p Обратившись к нам Вы получаете не только минимальные сроки реализации проекта, но и высокое качество производимых нами изделий и гарантированно низкие цены.
+					h2.contentBlock__title Обслуживание вентиляции и систем кондиционирования
+					.contentBlock__about
+						.contentBlock__photo
+							img(src="https://dummyimage.com/600x400/aeaeae/fff.jpg", alt="")
+						.contentBlock__descr
+							p Проводим сезонное обслуживание систем вентиляции, различного вентиляционного оборудования, приточно вытяжных систем, МВО.
+							p Обслуживание канальных кондиционеров, полупромов и промышленных, мультизональных систем кондиционирования. Чистка бытовых сплит систем.
+							p Ремонт и замена оборудования, канальных вентиляторов, радиальных вентиляторов, дополнительного вентиляционного обрудования. Модернизация существующей системы вентиляции.
+					h2.contentBlock__title В перечень наших задач входит:
+					.contentBlock__about
+						.contentBlock__list
+							ul
+								li Разработка тех.задания (в случае его отсутствия).
+								li Проектирование вентиляционных сетей.
+								li Подбор вентиляционного и климатического оборудования.
+								li Расчет мощности оборудования и кондиционеров.
+								li Оценка финансовой целесообразности оборудования.
+								li Поставка вентиляционной и климатической техники.
+								li Монтаж вентиляции и кондиционеров бытового и промышленного назначения.
+								li Испытания техники и ввод в эксплуатацию.
+								li Обслуживание вентиляционных сетей и кондиционеров.
+					
+				include ../modules/sidebar/sidebar
+
+
