--- a/app/sass/_font.sass
+++ b/app/sass/_font.sass
@@ -1,19 +1,36 @@
 @font-face 
-	font-family: 'Roboto'
-	src: url('../fonts/Roboto/Roboto-Regular.eot')
-	src: url('../fonts/Roboto/Roboto-Regular.eot?#iefix') format('embedded-opentype'),
-	url('../fonts/Roboto/Roboto-Regular.woff2') format('woff2'),
-	url('../fonts/Roboto/Roboto-Regular.woff') format('woff'),
-	url('../fonts/Roboto/Roboto-Regular.ttf') format('truetype')
+	font-family: 'Ubuntu'
+	src: url('../fonts/Ubuntu/Ubuntu-Light.eot')
+	src: url('../fonts/Ubuntu/Ubuntu-Light.eot?#iefix') format('embedded-opentype'),
+	url('../fonts/Ubuntu/Ubuntu-Light.woff2') format('woff2'),
+	url('../fonts/Ubuntu/Ubuntu-Light.woff') format('woff'),
+	url('../fonts/Ubuntu/Ubuntu-Light.ttf') format('truetype')
+	font-weight: 300
+	font-style: normal
+@font-face 
+	font-family: 'Ubuntu'
+	src: url('../fonts/Ubuntu/Ubuntu-Regular.eot')
+	src: url('../fonts/Ubuntu/Ubuntu-Regular.eot?#iefix') format('embedded-opentype'),
+	url('../fonts/Ubuntu/Ubuntu-Regular.woff2') format('woff2'),
+	url('../fonts/Ubuntu/Ubuntu-Regular.woff') format('woff'),
+	url('../fonts/Ubuntu/Ubuntu-Regular.ttf') format('truetype')
 	font-weight: 400
 	font-style: normal
-
+@font-face 
+	font-family: 'Ubuntu'
+	src: url('../fonts/Ubuntu/Ubuntu-Medium.eot')
+	src: url('../fonts/Ubuntu/Ubuntu-Medium.eot?#iefix') format('embedded-opentype'),
+	url('../fonts/Ubuntu/Ubuntu-Medium.woff2') format('woff2'),
+	url('../fonts/Ubuntu/Ubuntu-Medium.woff') format('woff'),
+	url('../fonts/Ubuntu/Ubuntu-Medium.ttf') format('truetype')
+	font-weight: 500
+	font-style: normal
 @font-face
-	font-family: 'Roboto'
-	src: url('../fonts/Roboto/Roboto-Bold.eot')
-	src: url('../fonts/Roboto/Roboto-Bold.eot?#iefix') format('embedded-opentype'),
-	url('../fonts/Roboto/Roboto-Bold.woff2') format('woff2'),
-	url('../fonts/Roboto/Roboto-Bold.woff') format('woff'),
-	url('../fonts/Roboto/Roboto-Bold.ttf') format('truetype')
+	font-family: 'Ubuntu'
+	src: url('../fonts/Ubuntu/Ubuntu-Bold.eot')
+	src: url('../fonts/Ubuntu/Ubuntu-Bold.eot?#iefix') format('embedded-opentype'),
+	url('../fonts/Ubuntu/Ubuntu-Bold.woff2') format('woff2'),
+	url('../fonts/Ubuntu/Ubuntu-Bold.woff') format('woff'),
+	url('../fonts/Ubuntu/Ubuntu-Bold.ttf') format('truetype')
 	font-weight: 700
 	font-style: normal
