--- a/app/sass/modules/blocks/_slider.sass
+++ b/app/sass/modules/blocks/_slider.sass
@@ -1,3 +1,22 @@
-.swiper-container
-    width: 100%
-    height: 600px
+.swiper
+	&-container
+		width: 100%
+		height: 450px
+	&-slide
+		img
+			display: block
+			width: 100%
+			height: 450px
+			object-fit: cover
+	&-text
+		position: absolute
+		z-index: 2
+		top: 25px
+		width: 100%
+		background: rgba(62, 112, 223, .75)
+		text-align: center
+		h1
+			font-size: $large-font-size
+			color: $active-red
+			color: $white
+			padding: 20px 0 20px 0
