--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -1,12 +1,13 @@
 @import "variables.sass"
 @import "sass-libs/swiper.scss"
+@import "smart-grid.sass"
 
-@import "modules/interface/menu.sass"
 @import "modules/header/header.sass"
+@import "modules/blocks/content.sass"
 
 @import "modules/blocks/slider.sass"
 
-@import "smart-grid.sass"
+
 @import "normalize.sass"
 @import "font.sass"
 
@@ -16,7 +17,7 @@ html
 
 body
 	background-color: $white
-	font-family: 'Roboto', sans-serif
+	font-family: 'Ubuntu', sans-serif
 
 .wrapper
 	+wrapper()
@@ -26,6 +27,3 @@ body
 
 .debug
 	+debug(rgba(0, 0, 0, 0.3), 1px solid rgb(19, 138, 92))
-
-
-
