Сверстал главную страницу

--- a/app/layout/modules/footer/footer.pug
+++ b/app/layout/modules/footer/footer.pug
@@ -1,1 +1,73 @@
 footer.footer
+	include ../slider/slider_footer
+	// Footer Link
+	.footerLink
+		.wrapper
+			.footerContainer
+				nav.footerBlock
+					ul.footerBlock__link
+						li
+							a(href="#") Главная
+						li
+							a(href="#") Наши услуги
+						li
+							a(href="#") Отопление
+						li
+							a(href="#") Портфолио
+						li
+							a(href="#") Кондиционирование
+						li
+							a(href="#") Вопросы
+						li
+							a(href="#") Контакты
+					ul.footerBlock__link
+						li
+							a(href="#") Направление
+						li
+							a(href="#") Проектирование
+						li
+							a(href="#") Монтаж
+						li
+							a(href="#") Lessar
+						li
+							a(href="#") Lessar Cool +
+						li
+							a(href="#") Lessar Rational
+						li
+							a(href="#") Lessar Inverto
+					ul.footerBlock__link
+						li
+							a(href="#") Кондиционеры Tosot
+						li
+							a(href="#") Tosot NATAL
+						li
+							a(href="#") Tosot LORD
+						li
+							a(href="#") Tosot LORD EURO
+						li
+							a(href="#") Tosot U-GRACE
+						li
+							a(href="#") Tosot U-MIGHT
+						li
+							a(href="#") Выбираем TOSOT
+					ul.footerBlock__link
+						li
+							a(href="#") Кондиционеры QC
+						li
+							a(href="#") Quattro-Clima Prato
+						li
+							a(href="#") Quattro-Clima Milano
+						li
+							a(href="#") Инвертор дос. и нед.
+						li
+							a(href="#") Бюджетные сплит системы
+						li
+							a(href="#") Поздравления
+						li
+							a(href="#") Акции
+				.footerCopyright
+					.footerCopyright__text
+						p.footerCopyright__address Ардалл Инжиниринг - Новороссийск
+						p.footerCopyright__phone Мобильный: <span>+7 918 168 70 00</span>
+						p.footerCopyright__phone Рабочий: <span>+7 8617 61-92-16</span>
+						p.footerCopyright__copy Copyright © 2015-2019
