--- a/app/layout/modules/sidebar/sidebar.pug
+++ b/app/layout/modules/sidebar/sidebar.pug
@@ -19,3 +19,6 @@ aside.contentBlock__sidebar
 		p Грамотная и качественная установка сплит системы, нашими специалистами, позолит не беспокоиться о сроке службы кондиционера.
 		p Гарантируем соблюдение всех технических норм при монтаже сплит ситемы, и даем гарантию 3 года на все технические услуги.
 		p Гарантия на все сплит системы 3 года.
+	.contentBlock__btn
+		a(href="#").btnBlue.from-left Скачать прайс
+		a(href="#").btnBlue.from-left Карта сайта
