--- a/app/layout/modules/slider/slider_header.pug
+++ b/app/layout/modules/slider/slider_header.pug
@@ -1,6 +1,6 @@
-.slider
+.sliderHeader
 	.wrapper
-		.swiper-container
+		.swiper-container.swiper-header
 			.swiper-wrapper
 				.swiper-slide
 					img(src="img/slider-header/slide_1.jpg", alt="")
