--- a/app/sass/modules/sidebar/_sidebar.sass
+++ b/app/sass/modules/sidebar/_sidebar.sass
@@ -1,7 +1,7 @@
 &__sidebar
 	position: sticky
-	top: 0px
-	bottom: -20px
+	top: -20%
+	bottom: 0
 	+col()
 	+size(4)
 	padding: 0 15px
@@ -25,3 +25,5 @@
 			display: block
 			max-width: 100%
 			height: auto
+&__btn
+	padding: 15px 0 0 0
