--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -1,14 +1,24 @@
 @import "variables.sass"
-@import "sass-libs/swiper.scss"
 @import "smart-grid.sass"
-
+/* Slider */
+@import "sass-libs/swiper.scss"
+/* Interface */
+@import "modules/interface/interface.sass"
+/* Header */
 @import "modules/header/header.sass"
+/* Slider Header */
+@import "modules/blocks/slider_header.sass"
+/* Content */
 @import "modules/blocks/content.sass"
+/* Slider Footer */
+@import "modules/blocks/slider_footer.sass"
+/* Footer */
+@import "modules/footer/footer.sass"
 
-@import "modules/blocks/slider.sass"
 
-
+/* Normalize */
 @import "normalize.sass"
+/* Fonts */
 @import "font.sass"
 
 
