--- a/app/sass/modules/blocks/_content.sass
+++ b/app/sass/modules/blocks/_content.sass
@@ -1,12 +1,12 @@
 .main
-	margin: 20px 0 20px 0
+	margin: 20px 0 0 0
 .contentBlock
 	+row-flex()
 	align-items: flex-start
 	justify-content: space-between
 	&__title
 		text-align: center
-		padding: 15px 0
+		padding: 20px 0
 		font-weight: 500
 		color: $active-blue
 		font-size: $large-font-size
@@ -15,6 +15,7 @@
 		+size(8)
 		border: 1px solid rgb(234, 234, 234)
 		box-shadow: 0px 0px 4px -1px rgba(216, 214, 214, 0.75)
+		padding-bottom: 20px
 	&__about
 		padding: 0 15px
 	&__photo
@@ -25,7 +26,7 @@
 	&__descr
 		p
 			margin: 0
-			padding: 10px 0
+			padding: 15px 0
 	&__list
 		ul
 			display: flex
