--- a/app/sass/modules/blocks/_slider_header.sass
+++ b/app/sass/modules/blocks/_slider_header.sass
@@ -1,7 +1,11 @@
+.sliderHeader
+	margin: 20px 0 0 0
 .swiper
 	&-container
 		width: 100%
 		height: 450px
+		border: 1px solid rgb(234, 234, 234)
+		box-shadow: 0px 0px 4px -1px rgba(216, 214, 214, 0.75)
 	&-slide
 		img
 			display: block
