--- a/app/sass/modules/interface/_menu.sass
+++ b/app/sass/modules/interface/_menu.sass
@@ -1,7 +1,8 @@
 .menuBlocks
 	background: rgba(0, 0, 0, 0.1)
+	border: 1px solid rgb(234, 234, 234)
+	box-shadow: 0px 0px 4px -1px rgba(216, 214, 214, 0.75)
 	margin-top: 20px
-	margin-bottom: 20px
 	box-sizing: border-box
 	+lg-block
 		padding: 15px 30px
